--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy
-scipy
-trimesh
-torch
-open3d
+numpy==1.23.5
+scipy==1.9.3
+trimesh==3.16.4
+open3d==0.16.1
+imageio==2.22.4
+matplotlib==3.6.2
