--- a/setup.cfg
+++ b/setup.cfg
@@ -10,16 +10,11 @@ long_description_content_type = text/markdown
 [options]
 packages = find:
 install_requires =
-    matplotlib
     numpy
     scipy
     trimesh
-    pyssht
-    pyshtools
+    open3d
+    imageio
+    matplotlib
 
 python_requires = >=3.7
-
-
-[options.extras_require]
-examples =
-    jupyter
